--- a/rus.html
+++ b/rus.html
@@ -1,1 +1,27 @@
-<meta content="Производители, импортеры, магазины — все, кто участвует в обороте товаров, подлежащих маркировке, — должны соблюдать правила работы с маркированной продукцией, иначе компанию ждет штраф. 1 декабря перечень санкций расширился: вступила в силу статья 15.12 КоАП РФ. Мы свели все штрафы — и новые,..." property="og:description" />
+Производители, импортеры, магазины — все, кто участвует в обороте товаров, подлежащих маркировке, — должны соблюдать правила работы с маркированной продукцией, иначе компанию ждет штраф. 1 декабря перечень санкций расширился: вступила в силу статья 15.12 КоАП РФ. Мы свели все штрафы — и новые, и действовавшие прежде — в единую шпаргалку.
+
+Товар без кода маркировки
+Такой товар нельзя принимать. Вы не сможете его ни перепродать другой компании, ни реализовать конечному потребителю — придется списывать. 
+
+Если проверяющие обнаружат в торговом зале или на складе такой товар, компанию и должностных лиц  ждет штраф.
+
+Административная ответственность: 
+
+для должностных лиц штраф 5000 — 10 000 рублей с конфискацией немаркированной продукции;
+для компаний — штраф 50 000 — 300 000 рублей с конфискацией немаркированной продукции.
+Уголовная ответственность: за преступления в особо крупных размерах и в случае сговора — штраф до 1 млн рублей или лишение свободы до 6 лет (ст. 171.1 УК РФ). Крупным правонарушение считается тогда, когда стоимость немаркированных товаров больше четырехсот тысяч рублей.
+
+Эти санкции действуют для следующих товарных групп:
+
+табак — все сигареты и папиросы (табаки, биди, кретек — 1 июля 2021 года);
+фотоаппараты и лампы-вспышки;
+сыры и мороженое, произведенные после 1 июня 2021 года;
+молочная продукция сроком годности более 40 дней, если она произведена после 1 сентября 2021 года;
+молочная продукция сроком годности 40 дней и менее, если она произведена после 1 декабря 2021 года;
+духи и туалетная вода с 1 октября 2020 года;
+обувь;
+упакованная минеральная вода, произведенная после 1 декабря 2021  года;
+товары легкой промышленности;
+шины и покрышки;
+прочая упакованная вода, произведенная после 1 марта 2022 года.
+Маркировка лекарств стала обязательной с 1 июля 2020 года (а восьми высокозатратных нозологий — с 1 октября 2019 года). Но до 1 октября 2020 года действовал мораторий на штрафы для фармакологических организаций. 
